fixtures/src/invalid/content-epub-type-invalid/OEBPS/chapter1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
<head><title>Chapter 1</title></head>
<body>
  <section epub:type="fake-semantic-type">
    <h1>Chapter 1</h1>
    <p>Hello, world.</p>
  </section>
</body>
</html>